<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent">


    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:id="@+id/register_txi_username">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/usertxt" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/register_txi_username"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:id="@+id/register_txi_email">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/register_txi_email"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:id="@+id/register_txi_passwd">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/passwdtxt" />
    </android.support.design.widget.TextInputLayout>

    <RadioGroup
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/register_txi_passwd"
        android:layout_alignParentLeft="true"
        android:orientation="horizontal"
        android:layout_alignParentStart="true"
        android:id="@+id/register_radiogroup"
        >

        <RadioButton
            android:text="@string/particular"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/register_radiobtn_person"
            android:layout_weight="1"
            android:onClick="mostrarTxi"
            android:checked="true" />

        <RadioButton
            android:text="@string/enterprise"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/register_radiobtn_enterprise"
            android:layout_weight="1"
            android:onClick="mostrarTxi"/>
    </RadioGroup>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/register_radiogroup"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:id="@+id/register_txi_enterprise"
        android:visibility="invisible">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enterprisename" />
    </android.support.design.widget.TextInputLayout>

    <Spinner
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/register_txi_enterprise"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:id="@+id/register_spn_provinces" />

    <Spinner
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/register_spn_provinces"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"

        android:id="@+id/register_spn_localities" />

    <CheckBox
        android:text="@string/receive_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/register_spn_localities"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:id="@+id/checkBox5" />

    <CheckBox
        android:text="@string/accept_conditions"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/checkBox5"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:id="@+id/checkBox6" />


</RelativeLayout>